realizzato corpo centrale del sito

--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
                 </aside>
 
                 <main>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <div class="titolo-paragrafo">
+                    <h3>OUTDOOR WEAR FOR THE WINTER HIKER</h3>
+                    <p>Posted on January 13, 2016 by David Morgan</p>
+                    <a href="#">2 Comments</a>
+                </div>
+
+                <img id=sfondo src="https://organicthemes.com/demo/natural-lite/files/2016/01/featured-09-768x341.jpg" alt="sfondo montagna">
+                <p id=paragrafo>Natural Lite is a beautiful free theme for WordPress created by Organic Themes. It’s a perfect theme for business websites with a focus on the environment. Whether you’re providing fishing charters or surf adventures, promoting local farmers markets or saving the whales, offering vegetarian…</p>
+
                 </main>
 
                 <aside class="right">
@@ -68,7 +76,10 @@
                         <button type="submit" name="button">Go</button>
                     </div>
                     <div class="sotto">
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            <h4>Tag Could</h4>
+                        <ul>
+                            <a href="">adventure apparel camping clothing couples drive extreme fashion hiking hippie mountains nature outdoors road trip snowboarding sports stories styles tales trails</a>
+                        </ul>
                     </div>
                 </aside>
 
