--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title></title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
     </head>
     <body>
         <div class="container">
@@ -16,11 +17,25 @@
                 <div class="menucont">
                     <span class="menuitems">HOME
                         <i class="fas fa-chevron-down"></i>
+                        &nbsp;
+                        </noscript>
                     </span>
-                    <span class="menuitems">ABOUT</span>
-                    <span class="menuitems">TEMPLATES</span>
-                    <span class="menuitems">BLOG</span>
-                    <span class="menuitems">CONTACT</span>
+                    <span class="menuitems">ABOUT
+                        <i class="fas fa-chevron-down"></i>
+                        &nbsp;
+                    </span>
+                    <span class="menuitems">TEMPLATES
+                        <i class="fas fa-chevron-down"></i>
+                        &nbsp;
+                    </span>
+                    <span class="menuitems">BLOG
+                        <i class="fas fa-chevron-down"></i>
+                        &nbsp;
+                    </span>
+                    <span class="menuitems">CONTACT
+                        <i class="fas fa-chevron-down"></i>
+                        &nbsp;
+                    </span>
                 </div>
 
             </nav>
@@ -86,7 +101,9 @@
             </div>
 
                 <footer>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    Copyright © 2020 · All Rights Reserved · Natural Lite
+
+                    Theme: Natural Lite by Organic Themes · RSS Feed
                 </footer>
 
         </div>
