--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 <main>
                 <div class="titolo-paragrafo">
                     <h3>OUTDOOR WEAR FOR THE WINTER HIKER</h3>
-                    <p>Posted on January 13, 2016 by David Morgan</p>
-                    <a href="#">2 Comments</a>
+                    <p><i class="fas fa-calendar-alt" style="color:gray"></i> Posted on January 13, 2016 by David Morgan</p>
+                    <a href="#"><i class="fas fa-comment" style="color:gray"></i> 2 Comments</a>
                 </div>
 
                 <img id=sfondo src="https://organicthemes.com/demo/natural-lite/files/2016/01/featured-09-768x341.jpg" alt="sfondo montagna">
